--- a/descriptives_groupby.ipynb
+++ b/descriptives_groupby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ab87bd9",
+   "id": "9232ca94",
    "metadata": {},
    "source": [
     "# Grouping data"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270fd726",
+   "id": "366a0fb0",
    "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/jillxoreilly/StatsCourse/blob//main/notebooks/descriptives_groupby.ipynb#)\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89306af4",
+   "id": "f67e8082",
    "metadata": {},
    "source": [
     "### Set up Python libraries\n",
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4acfdf74",
+   "execution_count": 2,
+   "id": "d20cd52e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1313f9a2",
+   "id": "a4597a22",
    "metadata": {},
    "source": [
     "### Load and view the data\n",
@@ -58,29 +58,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "02918020",
+   "execution_count": 3,
+   "id": "f7e04c0f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "to_csv() got an unexpected keyword argument 'Index'",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/q4/twg1yll54y142rc02m5wwbt40000gr/T/ipykernel_11681/2301791713.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    vehicles.to_csv('vehicles.csv', Index=False)\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m\u001b[0;31m:\u001b[0m to_csv() got an unexpected keyword argument 'Index'\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>length</th>\n",
+       "      <th>height</th>\n",
+       "      <th>width</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.9187</td>\n",
+       "      <td>1.5320</td>\n",
+       "      <td>1.8030</td>\n",
+       "      <td>car</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.6486</td>\n",
+       "      <td>1.5936</td>\n",
+       "      <td>1.6463</td>\n",
+       "      <td>car</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.5785</td>\n",
+       "      <td>1.5447</td>\n",
+       "      <td>1.7140</td>\n",
+       "      <td>car</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.5563</td>\n",
+       "      <td>1.5549</td>\n",
+       "      <td>1.7331</td>\n",
+       "      <td>car</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.0321</td>\n",
+       "      <td>1.5069</td>\n",
+       "      <td>1.7320</td>\n",
+       "      <td>car</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1359</th>\n",
+       "      <td>15.5000</td>\n",
+       "      <td>4.2065</td>\n",
+       "      <td>2.5112</td>\n",
+       "      <td>truck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1360</th>\n",
+       "      <td>14.4960</td>\n",
+       "      <td>4.1965</td>\n",
+       "      <td>2.5166</td>\n",
+       "      <td>truck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1361</th>\n",
+       "      <td>15.9890</td>\n",
+       "      <td>4.1964</td>\n",
+       "      <td>2.4757</td>\n",
+       "      <td>truck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1362</th>\n",
+       "      <td>14.3700</td>\n",
+       "      <td>4.2009</td>\n",
+       "      <td>2.5047</td>\n",
+       "      <td>truck</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1363</th>\n",
+       "      <td>14.2350</td>\n",
+       "      <td>4.2016</td>\n",
+       "      <td>2.5212</td>\n",
+       "      <td>truck</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1364 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       length  height   width   type\n",
+       "0      3.9187  1.5320  1.8030    car\n",
+       "1      4.6486  1.5936  1.6463    car\n",
+       "2      3.5785  1.5447  1.7140    car\n",
+       "3      3.5563  1.5549  1.7331    car\n",
+       "4      4.0321  1.5069  1.7320    car\n",
+       "...       ...     ...     ...    ...\n",
+       "1359  15.5000  4.2065  2.5112  truck\n",
+       "1360  14.4960  4.1965  2.5166  truck\n",
+       "1361  15.9890  4.1964  2.4757  truck\n",
+       "1362  14.3700  4.2009  2.5047  truck\n",
+       "1363  14.2350  4.2016  2.5212  truck\n",
+       "\n",
+       "[1364 rows x 4 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "vehicles = pandas.read_csv('https://raw.githubusercontent.com/jillxoreilly/StatsCourseBook/main/data/vehicles.csv')\n",
-    "display(vehicles)"
+    "display(vehicles)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c29365c3",
+   "id": "9c4ea3a0",
    "metadata": {},
    "source": [
     "That was a long list of vehicles!\n",
@@ -90,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e3f8f4",
+   "id": "b98eb124",
    "metadata": {},
    "source": [
     "### Obtain descriptive statistics\n",
@@ -101,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b8a83075",
+   "id": "3e50ae01",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "444f220a",
+   "id": "b68ca824",
    "metadata": {},
    "source": [
     "### Why group the data?"
@@ -137,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79e07c7c",
+   "id": "7eb311ab",
    "metadata": {},
    "source": [
     "You can see above that the mean length of vehicles in the car park is 6.72m.\n",
@@ -152,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "35bf17de",
+   "id": "6f2d5789",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b455a7b",
+   "id": "05b21050",
    "metadata": {},
    "source": [
     "Interesting. It looks like there are several clusters of vehicle lengths. \n",
@@ -199,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e4aa28e5",
+   "id": "5217b582",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8db4d63",
+   "id": "df4f99fd",
    "metadata": {},
    "source": [
     "Aha. We might want to describe our data separately for each by vehicle type.\n",
@@ -243,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b9eb545a",
+   "id": "d59ebef0",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51db19d1",
+   "id": "d2bfe692",
    "metadata": {},
    "source": [
     "we can see that 981 of the vehicles were cars, and their mean length was 4.198m, much shorter than the mean over all vehicles.\n",
@@ -360,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f3b51582",
+   "id": "42b5f0ed",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30380b6e",
+   "id": "eb3ba699",
    "metadata": {},
    "source": [
     "### <tt>pandas.groupby</tt>\n",
@@ -478,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2962e10d",
+   "id": "170eeb80",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5fb2b28",
+   "id": "5563e79f",
    "metadata": {},
    "source": [
     "Yikes, that was an unweildy table!\n",
@@ -684,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0eb1ae77",
+   "id": "fbf04c58",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45d95a11",
+   "id": "a3bf0c66",
    "metadata": {},
    "source": [
     "... or to output one descriptive (such as the mean) at a time, rather than the whole table"
@@ -801,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "aad710fc",
+   "id": "c51bf3df",
    "metadata": {},
    "outputs": [
     {
@@ -879,8 +1001,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
