--- a/descriptives_TutorialExercises.ipynb
+++ b/descriptives_TutorialExercises.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Tutorial exercises I\n",
     "\n",
-    "You should work through this is the tutorial. The idea is to bring together the skills you have learned (and highlight any gaps to discuss woith your tutor)"
+    "You should work through this is the tutorial. The idea is to bring together the skills you have learned (and highlight any gaps to discuss with your tutor)"
    ]
   },
   {
@@ -226,11 +226,107 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>length</th>\n",
+       "      <th>height</th>\n",
+       "      <th>width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1364.000000</td>\n",
+       "      <td>1364.000000</td>\n",
+       "      <td>1364.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.722972</td>\n",
+       "      <td>2.234867</td>\n",
+       "      <td>1.981283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4.232075</td>\n",
+       "      <td>1.072685</td>\n",
+       "      <td>0.309353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.110900</td>\n",
+       "      <td>1.430400</td>\n",
+       "      <td>1.624100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.929450</td>\n",
+       "      <td>1.553600</td>\n",
+       "      <td>1.771800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.419300</td>\n",
+       "      <td>1.601250</td>\n",
+       "      <td>1.812950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>9.260325</td>\n",
+       "      <td>2.911750</td>\n",
+       "      <td>2.254650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>16.231000</td>\n",
+       "      <td>4.213700</td>\n",
+       "      <td>2.546700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            length       height        width\n",
+       "count  1364.000000  1364.000000  1364.000000\n",
+       "mean      6.722972     2.234867     1.981283\n",
+       "std       4.232075     1.072685     0.309353\n",
+       "min       3.110900     1.430400     1.624100\n",
+       "25%       3.929450     1.553600     1.771800\n",
+       "50%       4.419300     1.601250     1.812950\n",
+       "75%       9.260325     2.911750     2.254650\n",
+       "max      16.231000     4.213700     2.546700"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "vehicles = pandas.read_csv('https://raw.githubusercontent.com/jillxoreilly/StatsCourseBook/main/data/vehicles.csv')\n",
-    "display(vehicles)"
+    "vehicles = pandas.read_csv('https://raw.githubusercontent.com/jillxoreilly/StatsCourseBook/main/data/vehicles_2.csv')\n",
+    "display(vehicles)\n",
+    "vehicles.describe()"
    ]
   },
   {
