fix error in tutorial exercises again

--- a/descriptives_TutorialExercises.ipynb
+++ b/descriptives_TutorialExercises.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "71268ed1",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1361</th>\n",
-       "      <td>15.9890</td>\n",
+       "      <td>9999.0000</td>\n",
        "      <td>4.1964</td>\n",
        "      <td>2.4757</td>\n",
        "      <td>truck</td>\n",
@@ -208,18 +208,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       length  height   width   type\n",
-       "0      3.9187  1.5320  1.8030    car\n",
-       "1      4.6486  1.5936  1.6463    car\n",
-       "2      3.5785  1.5447  1.7140    car\n",
-       "3      3.5563  1.5549  1.7331    car\n",
-       "4      4.0321  1.5069  1.7320    car\n",
-       "...       ...     ...     ...    ...\n",
-       "1359  15.5000  4.2065  2.5112  truck\n",
-       "1360  14.4960  4.1965  2.5166  truck\n",
-       "1361  15.9890  4.1964  2.4757  truck\n",
-       "1362  14.3700  4.2009  2.5047  truck\n",
-       "1363  14.2350  4.2016  2.5212  truck\n",
+       "         length  height   width   type\n",
+       "0        3.9187  1.5320  1.8030    car\n",
+       "1        4.6486  1.5936  1.6463    car\n",
+       "2        3.5785  1.5447  1.7140    car\n",
+       "3        3.5563  1.5549  1.7331    car\n",
+       "4        4.0321  1.5069  1.7320    car\n",
+       "...         ...     ...     ...    ...\n",
+       "1359    15.5000  4.2065  2.5112  truck\n",
+       "1360    14.4960  4.1965  2.5166  truck\n",
+       "1361  9999.0000  4.1964  2.4757  truck\n",
+       "1362    14.3700  4.2009  2.5047  truck\n",
+       "1363    14.2350  4.2016  2.5212  truck\n",
        "\n",
        "[1364 rows x 4 columns]"
       ]
@@ -262,13 +262,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>6.722972</td>\n",
+       "      <td>36.124518</td>\n",
        "      <td>2.234867</td>\n",
        "      <td>1.981283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>4.232075</td>\n",
+       "      <td>540.534138</td>\n",
        "      <td>1.072685</td>\n",
        "      <td>0.309353</td>\n",
        "    </tr>\n",
@@ -280,25 +280,25 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>3.929450</td>\n",
+       "      <td>3.930450</td>\n",
        "      <td>1.553600</td>\n",
        "      <td>1.771800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>4.419300</td>\n",
+       "      <td>4.421100</td>\n",
        "      <td>1.601250</td>\n",
        "      <td>1.812950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>9.260325</td>\n",
+       "      <td>9.540825</td>\n",
        "      <td>2.911750</td>\n",
        "      <td>2.254650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>16.231000</td>\n",
+       "      <td>9999.000000</td>\n",
        "      <td>4.213700</td>\n",
        "      <td>2.546700</td>\n",
        "    </tr>\n",
@@ -309,24 +309,23 @@
       "text/plain": [
        "            length       height        width\n",
        "count  1364.000000  1364.000000  1364.000000\n",
-       "mean      6.722972     2.234867     1.981283\n",
-       "std       4.232075     1.072685     0.309353\n",
+       "mean     36.124518     2.234867     1.981283\n",
+       "std     540.534138     1.072685     0.309353\n",
        "min       3.110900     1.430400     1.624100\n",
-       "25%       3.929450     1.553600     1.771800\n",
-       "50%       4.419300     1.601250     1.812950\n",
-       "75%       9.260325     2.911750     2.254650\n",
-       "max      16.231000     4.213700     2.546700"
+       "25%       3.930450     1.553600     1.771800\n",
+       "50%       4.421100     1.601250     1.812950\n",
+       "75%       9.540825     2.911750     2.254650\n",
+       "max    9999.000000     4.213700     2.546700"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vehicles = pandas.read_csv('https://raw.githubusercontent.com/jillxoreilly/StatsCourseBook/main/data/vehicles_2.csv')\n",
-    "display(vehicles)\n",
-    "vehicles.describe()"
+    "display(vehicles)"
    ]
   },
   {
