--- a/permutation_paired.ipynb
+++ b/permutation_paired.ipynb
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "c216feb4",
+   "id": "7544e3ef",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01bb45ba",
+   "id": "801dc763",
    "metadata": {},
    "source": [
     "### Plot the null distribution for a large number of shuffles\n",
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d4140ef",
+   "id": "ae1e1fe3",
    "metadata": {},
    "source": [
     "## Use a built in function\n",
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "994ce3a0",
+   "id": "58c0b46d",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8405730",
+   "id": "b4a2e8ea",
    "metadata": {},
    "source": [
     "If this is less than 1.8.0 you need to update it -\n",
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c05f014",
+   "id": "4876cd34",
    "metadata": {},
    "source": [
     "### Syntax of <tt>stats.permutation_test</tt>\n",
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d9e63c",
+   "id": "a13b89d1",
    "metadata": {},
    "source": [
     "Firstly, to reassure you this is doing a very similar job to our home-made code, check the p-value (should be about 0.06). \n",
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66c74ad1",
+   "id": "1fdec81e",
    "metadata": {},
    "source": [
     "However, the syntax may be a bit unfamiliar.\n",
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea572e71",
+   "id": "a7afbd3b",
    "metadata": {},
    "source": [
     "### Defining a function\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "2aa525c3",
+   "id": "ab69c8ea",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba58a63d",
+   "id": "4be2278c",
    "metadata": {},
    "source": [
     "Here's another example:"
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "62783ef0",
+   "id": "a59f97f8",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a9fee51",
+   "id": "6bc1764a",
    "metadata": {},
    "source": [
     "Now we can see how we could run <tt>stats.permutation_test</tt> on our function <tt>bananas</tt> and our data <tt>cats</tt> and <tt>dogs</tt>"
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "86441ea2",
+   "id": "51006dfc",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6bff36b",
+   "id": "416776bf",
    "metadata": {},
    "source": [
     "## Recap\n",
@@ -905,13 +905,13 @@
     "\n",
     "Permutation testing in this way gives us a null distribution for the mean difference. Values of mean difference that occur rarely in the null distriubtion are considered statistically significant.\n",
     "    \n",
-    "To run the permutation test with <tt>scipy.stats</tt> we need the option `permutation_type`='samples'`"
+    "To run the permutation test with <tt>scipy.stats</tt> we need the option `permutation_type='samples'`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b276077",
+   "id": "7513a6b4",
    "metadata": {},
    "outputs": [],
    "source": []
