--- a/permutation_independentSamples.ipynb
+++ b/permutation_independentSamples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c9eeb3b7",
+   "id": "ed2cf7e9",
    "metadata": {},
    "source": [
     "# Permutation test for unpaired or independent samples data\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "56d0646c",
+   "id": "2da7e656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff1b5404",
+   "id": "de8967f4",
    "metadata": {},
    "source": [
     "## Toy example\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "0f0dac93",
+   "id": "4d884bc5",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "680f97af",
+   "id": "62b366d1",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "513f8da3",
+   "id": "c6d81750",
    "metadata": {},
    "source": [
     "It seems the cat owners eat more yoghurt, on average, than the dog owners. \n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "9cbdc566",
+   "id": "0c779adb",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ead079d5",
+   "id": "949f4ea2",
    "metadata": {},
    "source": [
     "We note that the mean number of yoghurts eaten is higher for cat owners, but this may be skewed by one cat-owning yogurt enthusiast."
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14113a1c",
+   "id": "193ce124",
    "metadata": {},
    "source": [
     "### Is this result statistically significant? \n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9c863fa",
+   "id": "2e7255ec",
    "metadata": {},
    "source": [
     "### Run the simulation\n",
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2adc781d",
+   "id": "aae0e8cf",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68145d74",
+   "id": "399bb873",
    "metadata": {},
    "source": [
     "For each shuffled dataframe we obtain the relevant summary statistic, that is the mean number of times yogurt is eaten by cat owners - mean number of times yogurt is eaten by dog owners:"
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "bd11f690",
+   "id": "3a4df12a",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4408fc07",
+   "id": "23bcf2d1",
    "metadata": {},
    "source": [
     "### Visualizing random shuffles in the yoghurt data\n",
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "bb88d865",
+   "id": "073c6ba6",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83bb608b",
+   "id": "4c9f86c2",
    "metadata": {},
    "source": [
     "You can see that the difference of means (difference in heights of the bars) depends on whether more of the high-yoghurt individuals are assigned as cat owners, and also depends quite a lot on which group the 14-yoghurt individual ends up in.\n",
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "1eaa6c68",
+   "id": "04745069",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6281546e",
+   "id": "8768d5c7",
    "metadata": {},
    "source": [
     "note that the difference of means (mean(x)-mean(y)) is NOT the same as the mean (pairwise) difference mean(x-y) that we used in the paired-data example"
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44c6f7c",
+   "id": "7244fd51",
    "metadata": {},
    "source": [
     "### Plot the null distribution for a large number of shuffles\n",
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e5ad9388",
+   "id": "ebfdbb4a",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5696efcc",
+   "id": "ebc841a7",
    "metadata": {},
    "source": [
     "### The $𝑝$-value¶\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48cb4446",
+   "id": "0796d3a2",
    "metadata": {},
    "source": [
     "## Use a built in function\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "fcd3789b",
+   "id": "c0d12e7d",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bab02e",
+   "id": "9f823fce",
    "metadata": {},
    "source": [
     "If this is less than 1.8.0 you need to update it -\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce5372de",
+   "id": "333761d3",
    "metadata": {},
    "source": [
     "### Syntax of <tt>stats.permutation_test</tt>\n",
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "823d2dbc",
+   "id": "12a69d71",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e68695d9",
+   "id": "34734880",
    "metadata": {},
    "source": [
     "Firstly, to reassure you this is doing a very similar job to our home-made code, check the p-value (should be about 0.18). \n",
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "e00de789",
+   "id": "8312b4c5",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a42ce6a",
+   "id": "ab35a69c",
    "metadata": {},
    "source": [
     "The syntax is very similar to that which we used for the paired test.\n",
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad51391",
+   "id": "5ff0e2d5",
    "metadata": {},
    "source": [
     "### Defining a function\n",
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a522e2ca",
+   "id": "90fc4a31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "539f4f71",
+   "id": "f9dd4a51",
    "metadata": {},
    "source": [
     "here's another example:"
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "f9768b11",
+   "id": "6b81461d",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5a607a",
+   "id": "15360517",
    "metadata": {},
    "source": [
     "## Recap\n",
@@ -768,8 +768,16 @@
     "\n",
     "Permutation testing in this way gives us a null distribution for the difference of means. Values of the difference of means that occur rarely in the null distriubtion are considered statistically significant.\n",
     "    \n",
-    "To run the permutation test with <tt>scipy.stats</tt> we need the option `permutation_type`='independent'`\n"
+    "To run the permutation test with <tt>scipy.stats</tt> we need the option `permutation_type='independent'`\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d956a5ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
