add scipystats instructions

--- a/permutation_paired.ipynb
+++ b/permutation_paired.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "53ba68e5",
+   "id": "3286b373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3429bf17",
+   "id": "4bd9c055",
    "metadata": {},
    "source": [
     "## Colab users\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e716b2e6",
+   "id": "c5c86d36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,15 +725,9 @@
    "id": "b4a2e8ea",
    "metadata": {},
    "source": [
-    "If this is less than 1.8.0 you need to update it -\n",
+    "If this is less than 1.8.0 you need to update it - see the technical note in the first page of this chapter\n",
     "\n",
-    "Mac: open a terminal (Applications--Utilities--Terminal and type:\n",
-    "<tt> conda install -c conda-forge scipy=1.10.0 </tt>\n",
-    "                      \n",
-    "Windows: open an Anaconda terminal (spotlight search for anaconda and select the anaconda terminal app) and type:\n",
-    "<tt> conda install -c conda-forge scipy=1.10.0 </tt>\n",
-    "\n",
-    "Please try and do this before the tutorial - otherwise your tutor will know you didn't read the prep work thoroughly ;-)"
+    "For those who are using Colab - check you followed the instructions at the top of this page"
    ]
   },
   {
