correct file paths classic tests

--- a/nonpara_MannWhitneyU.ipynb
+++ b/nonpara_MannWhitneyU.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "8a0ea5fa",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "0850fcb0",
    "metadata": {},
    "outputs": [
@@ -235,14 +235,14 @@
        "19  Visualisation                    9"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load the data and have a look\n",
-    "pandas.read_csv('data/juggling.csv')"
+    "pandas.read_csv('https://raw.githubusercontent.com/jillxoreilly/StatsCourseBook/main/data/juggling.csv')"
    ]
   },
   {
