upload some images

--- a/power_analysis.ipynb
+++ b/power_analysis.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "1e8d9615",
    "metadata": {},
    "outputs": [],
@@ -1870,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "id": "494aa4b6",
    "metadata": {},
    "outputs": [
@@ -1878,7 +1878,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "required sample size: n1 = 0.6012625837815468\n"
+      "required sample size: n1 = 40.02907607190629\n"
      ]
     }
    ],
@@ -1887,11 +1887,12 @@
     "# import required modules\n",
     "from statsmodels.stats.power import TTestPower\n",
     "\n",
+    "\n",
     "# run an analysis that models the relationship between the four factors \n",
     "analysis = TTestPower()\n",
     "\n",
     "# solve for sample size\n",
-    "n1 = analysis.solve_power(effect_size=0.4, alpha=0.05, nobs=24, power=None, alternative='larger')\n",
+    "n1 = analysis.solve_power(effect_size=0.4, alpha=0.05, nobs=None, power=0.8, alternative='larger')\n",
     "print('required sample size: n1 = ' + str(n1))\n",
     "\n",
     "# solve for power\n",
